# dotfiles

./: .gitconfig  .gitignore  .mackup.cfg  .notable.json  .npmrc  .tmux.conf  .wakatime.cfg  .zshrc  AGENTS.md  Brewfile  Brewfile.media-server  Brewfile.workstation  CLAUDE.md  README.md  backup.sh  gitconfig  install.sh  notable.json  ohmyposh.toml  ssh-config  starship.toml  tmux.conf  zshrc
.iterm/: com.googlecode.iterm2.plist  rodrigo.itermcolors
config/claude/: CLAUDE.md  settings.json  statusline-command.sh
config/claude/commands/: handoff.md
config/claude/hud/: combined-statusline.sh
config/ghostty/: config
config/nvim/: README.md  lazy-lock.json  lazyvim.json
config/ohmyposh/: config.toml
config/opencode/: AGENTS.md  oh-my-opencode-slim.json  oh-my-opencode.json  opencode.json
config/opencode/commands/: absorb.md  distill.md  sync-knowledge.md
config/opencode/plugins/: tmux-agent-sidebar.js  tmux-agent-status.ts  tmux-window-sidebar.ts
config/zed/: keymap.json  settings.json  tasks.json
config/zed/themes/: peacocks-in-space-zed.json
iterm/: com.googlecode.iterm2.plist
secrets/: backup.sh  install.sh
shell/: aliases.zsh  dev-tmux-layout.zsh  hooks.zsh  plugins.txt  tmux-agent-clear.sh  tmux-agent-icon.sh  tmux-hook.sh  tmux-navigator-msg.sh
tmux-window-sidebar/: Cargo.toml  PLAN.md  README.md  hook.sh  tmux-window-sidebar.conf  tmux-window-sidebar.tmux
tmux-window-sidebar/.opencode/plugins/: tmux-window-sidebar.js
tmux-window-sidebar/src/: app.rs  cli.rs  hook.rs  icons.rs  main.rs  render.rs  session.rs  sound.rs  state.rs  tmux.rs
(+18 files in other folders)
