[package]
name = "tmux-window-sidebar"
version = "0.1.0"
edition = "2021"
description = "Tmux sidebar TUI that replaces the status bar with per-window agent cards"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
dirs = "5"

[profile.release]
opt-level = 2
lto = true
strip = true